--- a/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
@@ -8,13 +8,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    
+    <title>@ViewBag.Title</title>
     @RenderSection("health", required: false)
     @Styles.Render("~/Content/css")
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>@ViewBag.Title</title>
+    <meta http-equiv="Refresh" content="3600" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
     <meta name="robots" content="*">
+    <!-- Apple iOS and Android stuff -->
+    <meta name="apple-mobile-web-app-capable" content="no" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- Apple iOS and Android stuff - don't remove! -->
     <link rel="icon" href="#" type="image/x-icon">
     <link rel="shortcut icon" href="#" type="image/x-icon">
         
