--- a/Shop_03_MultiProduct/Views/Product/List.cshtml
+++ b/Shop_03_MultiProduct/Views/Product/List.cshtml
@@ -255,7 +255,7 @@
                                                         {
                                                             <li class="active" data-target="#carousel-example-generic" data-slide-to="0"></li>
                                                         }
-                                                        else
+                                                        else if (i < 3)
                                                         {
                                                             <li data-target="#carousel-example-generic" data-slide-to="@i" class=""></li>
                                                         }
@@ -274,7 +274,7 @@
                                                                 </div>
                                                             </div>
                                                         }
-                                                        else
+                                                        else if (i < 3)
                                                         {
                                                             <div class="item">
                                                                 <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
