--- a/Shop_03_multiProduct/Views/Article/Category.cshtml
+++ b/Shop_03_multiProduct/Views/Article/Category.cshtml
@@ -6,6 +6,7 @@
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
     }
+    ViewBag.Title = "Tin tức | Ngon Lành";
 }
 @section health{
     <meta name="description" content="Tin tức Ngon Lành - Blog tin chia sẽ các bài viết liên quan đến sản phẩm của Ngon Lành. Các kinh nghiệm, mẹo vắt lựa chọn thực phẩm sạch, Hoa quả sạch. Công thức chế biến các món ăn ngon." />
