--- a/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -135,7 +135,7 @@
                                     <a href="/blog"><span>Tin tức</span> </a>
                                     <!--sub sub category-->
                                     <ul class="level1">
-                                        <li class="level1"><a title="blog" href="/blog"><span>Blogs</span></a></li>
+                                        <li class="level1"><a title="blog" href="/blog"><span>Blogs Tin tức</span></a></li>
                                         <li class="level1">
                                             <a title="shipper" href="/chinh-sach-van-chuyen-a86">
                                                 <span>Vận chuyển</span>
