--- a/BDS_04_BatDongSan_MultiLand/Views/Home/Index.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Home/Index.cshtml
@@ -90,7 +90,7 @@
                     <div class="col-md-4 col-sm-4">
                         <div class="popular-tabs">
                             <ul class="nav-tab">
-                                <li>Bất động sản mới</li>
+                                <li>Bất động sản mới <img src="/assets/images/new-marker.gif"></li>
                             </ul>
                             <div class="tab-container">
                                 <div id="tab-1" class="tab-panel active">
