--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -66,7 +66,7 @@
                         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col1">
                             <div class="newsletter-wrap">
                                 <h4>Đăng ký</h4>
-                                <form action="#" method="post" id="newsletter-validate-detail1">
+                                <div id="newsletter-validate-detail1">
                                     <div id="container_form_news">
                                         <div id="container_form_news2">
                                             <input type="text" name="email" id="newsletter1" title="Nhận thông tin khuyến mại." class="input-text required-entry validate-email" placeholder="Nhập địa chỉ email của bạn...">
@@ -75,7 +75,7 @@
                                         <!--container_form_news2-->
                                     </div>
                                     <!--container_form_news-->
-                                </form>
+                                </div>
 
                             </div>
                             <!--newsletter-wrap-->
