--- a/Shop_02_Onepage/Views/Product/Index.cshtml
+++ b/Shop_02_Onepage/Views/Product/Index.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-@if (ViewData["prDetail"] != null)
+﻿@if (ViewData["prDetail"] != null)
 {
     AnperoFrontend.WebService.ProductItem item = (AnperoFrontend.WebService.ProductItem)ViewData["prDetail"];
     <div class="page-top">
