--- a/Shop_03_multiProduct/Views/Product/Index.cshtml
+++ b/Shop_03_multiProduct/Views/Product/Index.cshtml
@@ -5,6 +5,7 @@
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
     }
+    string thisUrl = HttpContext.Current.Request.Url.AbsoluteUri;
     AnperoFrontend.WebService.ProductItem item = (AnperoFrontend.WebService.ProductItem)ViewData["prDetail"];
     @section health{
         <meta name="description" content="@Anpero.StringHelpper.removeHtmlTangs(item.ShortDesc)" />
@@ -12,9 +13,11 @@
         <link rel="stylesheet" type="text/css" href="~/assets/stylesheet/flexslider.css">
         <meta property="og:description" content="@item.ShortDesc" />
         <meta property="og:title" content="@item.PrName" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="ngonlanh.vn" />
+        <meta property="og:type" content="website" />        
         <meta property="og:image" content="@item.Images" />
+        <meta name="description" content="@Anpero.StringHelpper.removeHtmlTangs(item.ShortDesc)" />
+        <meta name="keywords" content="@Anpero.StringHelpper.UnicodeToKoDau(item.KeyWord)" />
+        <link rel="stylesheet" type="text/css" href="~/assets/stylesheet/flexslider.css">
     }
     <div id="page">
         <div class="page-heading">
@@ -26,30 +29,22 @@
                                 <li class="home"> <a href="/" title="Trang chủ">Trang chủ</a> <span>—› </span> </li>
                                 <li> <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId)" title="">@item.ParentCatName</a> <span>—› </span> </li>
                                 <li> <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
-                                @*<li> <strong>@item.PrName</strong> </li>*@
                             </ul>
                         </div>
-                        <!--col-xs-12-->
                     </div>
-                    <!--row-->
                 </div>
-                <!--container-->
             </div>
             <div class="page-title">
                 <h2>@item.PrName</h2>
             </div>
         </div>
-        <!-- BEGIN Main Container -->
         <div class="main-container col1-layout wow bounceInUp animated">
             <div class="main">
                 <div class="col-main">
-                    <!-- Endif Next Previous Product -->
                     <div class="product-view wow bounceInUp animated" itemscope="" itemtype="http://schema.org/Product" itemid="#product_base">
                         <div id="messages_product_view"></div>
-                        <!--product-next-prev-->
                         <div class="product-essential container">
-                            <div class="row">
-                                <div class="product-next-prev"> <a class="product-next" title="Next" href="#"><span></span></a> <a class="product-prev" title="Previous" href="#"><span></span></a> </div>
+                            <div class="row">                                
                                 <form action="" method="post" id="product_addtocart_form">
                                     <div class="product-img-box col-sm-6 col-xs-12">
                                         <div class="new-label new-top-left"> New </div>
@@ -71,12 +66,11 @@
                                                 }
                                             </div>
                                         </div>
-                                        <!-- end: more-images -->
-                                    </div>                                    
+                                    </div>
                                     <div class="product-shop col-sm-6 col-xs-12">
                                         <div class="product-name">
                                             <h1 itemprop="name">@item.PrName</h1>
-                                        </div>                            
+                                        </div>
                                         <span itemprop="aggregateRating" itemscope="" itemtype="http://schema.org/AggregateRating">
                                             <div class="rating">
                                                 <div class="ratings">
@@ -89,11 +83,20 @@
                                         </span>
                                         <div class="price-block">
                                             <div class="price-box"> <span class="regular-price" id="product-price-123"> <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)0</span> </span> </div>
-                                            <p class="availability in-stock">                                                
-                                                <span>In stock</span>
-                                            </p>
+                                            @if (@item.IsInstock)
+                                            {
+                                                <p class="availability in-stock">
+                                                    <span>Còn hàng</span>
+                                                </p>
+                                            }
+                                            else
+                                            {
+                                                <p class="availability out-stock">
+                                                    <span>Hết hàng</span>
+                                                </p>
+                                            }
+
                                         </div>
-                                        <!--price-block-->
                                         <div class="short-description">
                                             <h2>Mô tả ngắn</h2>
                                             <p>@Html.Raw(item.ShortDesc)</p>
@@ -102,33 +105,25 @@
                                             <div class="add-to-cart">
                                                 <div class="pull-left">
                                                     <div class="custom pull-left">
-                                                        <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;" class="increase items-count" type="button"><i class="icon-plus">&nbsp;</i></button>
-                                                        <input type="text" name="qty" id="qty" maxlength="12" value="1" title="Quantity:" class="input-text qty">
                                                         <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 0 ) result.value--;return false;" class="reduced items-count" type="button"><i class="icon-minus">&nbsp;</i></button>
+                                                        <input type="text" name="qty" id="qty" maxlength="12" value="1" title="Quantity:" class="input-text qty">
+                                                        <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;" class="increase items-count" type="button"><i class="icon-plus">&nbsp;</i></button>                                                        
                                                     </div>
-                                                    <!--custom pull-left-->
                                                 </div>
-                                                <!--pull-left-->
                                                 <button type="button" title="Add to Cart" class="button btn-cart" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span><i class="icon-basket"></i>Mua ngay</span></button>
                                             </div>
-                                            <!--add-to-cart-->
                                             <div class="email-addto-box">
                                                 <p class="email-friend"><a href="#" title="Email to a Friend"><span>Email to a Friend</span></a></p>
                                                 <ul class="add-to-links">
-                                                    <li> <a class="link-wishlist" href="wishlist.html" onclick="" title="Add To Wishlist"><span>Add To Wishlist</span></a> </li>
-                                                  
+                                                    <li> <a class="link-wishlist" href="http://www.facebook.com/share.php?u=@thisUrl&title=@commonInfo.Desc" onclick="" title="Add To Wishlist"><span>Add To Wishlist</span></a> </li>
                                                 </ul>
-                                                <!--add-to-links-->
                                             </div>
-                                            <!--email-addto-box-->
                                         </div>
-                                        <!--add-to-box-->
-                                        <!-- thm-mart Social Share-->
                                         <div class="social">
                                             <ul class="link">
                                                 @if (!string.IsNullOrEmpty(commonInfo.Skype) || !string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                                 {
-                                                    string thisUrl = HttpContext.Current.Request.Url.AbsoluteUri;
+                                                 
 
                                                     if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                                     {
@@ -146,14 +141,10 @@
                                                 }
                                             </ul>
                                         </div>
-                                        <!-- thm-mart Social Share Close-->
                                     </div>
-                                    <!--product-shop-->
-                                    <!--Detail page static block for version 3-->
                                 </form>
                             </div>
                         </div>
-                        <!--product-essential-->
                         <div class="product-collateral container">
                             <ul id="product-detail-tab" class="nav nav-tabs product-tabs">
                                 <li class="active"> <a href="#product_tabs_description" data-toggle="tab"> Mô tả sản phẩm </a> </li>
@@ -181,7 +172,6 @@
                                                 {
                                                     foreach (var items in relateProduct.Item)
                                                     {
-                                                        <!-- Item -->
                                                         <div class="item">
                                                             <div class="item-inner">
                                                                 <div class="item-img">
@@ -230,7 +220,6 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                        <!-- End Item -->
                                                     }
                                                 }
                                             }
@@ -244,10 +233,12 @@
             </div>
         </div>
     </div>
+
     @section scripts{
         <script type="text/javascript" src="~/assets/js/jquery.flexslider.js"></script>
         <script type="text/javascript" src="~/assets/js/jquery.bxslider.min.js"></script>
         <script type="text/javascript" src="~/assets/js/cloud-zoom.js"></script>
+
     }
 }
 
