--- a/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Apple iOS and Android stuff - don't remove! -->
     <link rel="icon" href="#" type="image/x-icon">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-        
+    <link rel="shortcut icon" href="#" type="image/x-icon">    
+    <meta property="og:image" content="@commonInfo.Logo" />
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/jquery.bxslider.css">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css">    
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/style.css" media="all">
@@ -39,7 +39,7 @@
     @Scripts.Render("~/bundles/scripts")
     
     @Html.Raw(commonInfo.AnperoPlugin)
-    @RenderSection("scripts", required: false)
+   
     @Html.Raw(commonInfo.PageScript)
 
     @Html.Partial("_partial/_MainFooter_1")
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="/assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.mobile-menu.min.js"></script>
-    
+    @RenderSection("scripts", required: false)
     <script type="text/javascript">
         jQuery(document).ready(function(){
             jQuery('#thm-rev-slider').show().revolution({
@@ -123,12 +123,7 @@
             });
         });
     </script>
-    <script type="text/javascript">   
-    function HideMe()
-    {
-        jQuery('.popup1').hide();
-        jQuery('#fade').hide();
-    }
+    <script type="text/javascript">       
     jQuery(window).load(function () {
         Cart.bindCart();
     });
