--- a/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
+++ b/Shop_03_multiProduct/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     }
 }
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <title>@ViewBag.Title</title>
     @RenderSection("health", required: false)
@@ -20,10 +21,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Apple iOS and Android stuff - don't remove! -->
     <link rel="icon" href="#" type="image/x-icon">
-    <link rel="shortcut icon" href="#" type="image/x-icon">    
+    <link rel="shortcut icon" href="#" type="image/x-icon">
     <meta property="og:image" content="@commonInfo.Logo" />
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/jquery.bxslider.css">
-    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css">    
+    <link rel="stylesheet" type="text/css" href="/assets/stylesheet/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/style.css" media="all">
     <link rel="stylesheet" type="text/css" href="/assets/stylesheet/responsive.css" media="all">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
@@ -31,19 +32,19 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    
+
     @Html.Partial("_partial/_MainHeader_1")
-    
+
     @RenderBody()
-    <script type="text/javascript" src="/Scripts/jquery-1-10.js"></script>    
+    <script type="text/javascript" src="/Scripts/jquery-1-10.js"></script>
     @Scripts.Render("~/bundles/scripts")
-    
+
     @Html.Raw(commonInfo.AnperoPlugin)
-   
+
     @Html.Raw(commonInfo.PageScript)
 
     @Html.Partial("_partial/_MainFooter_1")
-    
+
     <script type="text/javascript" src="/assets/js/parallax.js"></script>
     <script type="text/javascript" src="/assets/js/revslider.js"></script>
     <script type="text/javascript" src="/assets/js/common.js"></script>
@@ -52,12 +53,12 @@
     <script type="text/javascript" src="/assets/js/jquery.mobile-menu.min.js"></script>
     @RenderSection("scripts", required: false)
     <script type="text/javascript">
-        jQuery(document).ready(function(){
+        jQuery(document).ready(function () {
             jQuery('#thm-rev-slider').show().revolution({
                 dottedOverlay: 'none',
                 delay: 5000,
                 startwidth: 0,
-                startheight:900,
+                startheight: 900,
 
                 hideThumbs: 200,
                 thumbWidth: 200,
@@ -123,10 +124,10 @@
             });
         });
     </script>
-    <script type="text/javascript">       
-    jQuery(window).load(function () {
-        Cart.bindCart();
-    });
+    <script type="text/javascript">
+        jQuery(window).load(function () {
+            Cart.bindCart();
+        });
     </script>
 </body>
 </html>
