--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_Layout.cshtml
@@ -28,11 +28,11 @@
     <div id="header" class="header">
         <div class="container main-header">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-3 logo">
+                <div class="col-sm-12 col-md-3 logo">
                     <a href="/"><img alt="@commonInfo.Desc" src="@commonInfo.Logo" /></a>
                 </div>
                 @if (!Request.Browser.IsMobileDevice)
-                { <div class="col-xs-7 col-sm-8 col-md-9">
+                { <div class="col-sm-8 col-md-9">
                     @Html.Partial("_partial/_HomeSlide_1")
                 </div>
                 }
