--- a/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/BDS_04_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -7,7 +7,7 @@
                     Ads[] slide = (Ads[])ViewData["AdsSlide"];
                     if (slide.Length > 0)
                     {
-                        <ul class="owl-carousel"  data-dots="false" data-loop="true" data-nav="true" data-margin="10" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1}}'>
+                        <ul class="owl-carousel"  data-dots="false" data-loop="true" data-nav="true" data-margin="10" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-responsive='{"0":{"items":1},"600":{"items":3},"1000":{"items":3}}'>
 
                             @foreach (var item in slide)
                             {
